feat: 新增Compose的Column、Row、Box的用法

--- a/compose/src/main/AndroidManifest.xml
+++ b/compose/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Compose"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.main.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Compose">
@@ -23,6 +23,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".view.column.ColumnActivity">
+        </activity>
+
+        <activity
+            android:name=".view.row.RowActivity">
+        </activity>
+
+        <activity
+            android:name=".view.constraintlayout.ConstraintLayoutActivity">
         </activity>
     </application>
 
