--- a/compose/src/main/AndroidManifest.xml
+++ b/compose/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
         <activity
             android:name=".view.constraintlayout.ConstraintLayoutActivity">
         </activity>
+
+        <activity
+            android:name=".view.login.LoginActivity">
+        </activity>
+
     </application>
 
 </manifest>
