feat: init state in compose

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "Android-Playground"
 include ':compose'
 include ':codelabcompsebasic'
+include ':stateincompose'
