feat: 新增Baseline Profiles建置

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,5 @@ rootProject.name = "Android-Playground"
 include ':compose'
 include ':codelabcompsebasic'
 include ':stateincompose'
+include ':performance'
+include ':performancebenchmark'
