--- a/performance/src/main/AndroidManifest.xml
+++ b/performance/src/main/AndroidManifest.xml
@@ -1,37 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="fu.android_playground">
+    package="fu.trainnin.performance">
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Compose"
-        tools:targetApi="31">
-        <profileable
-            android:shell="true"
-            tools:targetApi="q" />
-
+        android:theme="@style/Theme.AndroidPlayground">
         <activity
-            android:name=".view.main.MainActivity"
+            android:name="fu.train.performance.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Compose">
+            android:theme="@style/Theme.AndroidPlayground.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.column.ColumnActivity"></activity>
-        <activity android:name=".view.row.RowActivity"></activity>
-        <activity android:name=".view.constraintlayout.ConstraintLayoutActivity"></activity>
-        <activity android:name=".view.login.LoginActivity"></activity>
+
+        <!-- [START macrobenchmark_setup_profileable] -->
+        <!-- enable profiling by macrobenchmark -->
+        <profileable
+            android:shell="true"
+            tools:targetApi="q" />
+        <!-- [END macrobenchmark_setup_profileable] -->
     </application>
 
 </manifest>
