--- a/settings.gradle
+++ b/settings.gradle
@@ -13,8 +13,9 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "Android-Playground"
-include ':compose'
-include ':codelabcompsebasic'
-include ':stateincompose'
-include ':performance'
-include ':performancebenchmark'
+include ":compose"
+include ":codelabcompsebasic"
+include ":stateincompose"
+include ":performance_root"
+include ":performance_root:performance"
+include ":performance_root:benchmark"
